--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,16 @@ entitymanager.packagesToScan= com.example.cookies
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+keycloak.auth-server-url=http://192.168.0.105:8081/
+keycloak.realm=cookies
+keycloak.resource=cookies
+keycloak.credentials.secret=elJwPcXHHFKCbDYNCpNTANr7wzOKZ41I
+keycloak.public-client=true
+keycloak.use-resource-role-mappings=true
+
+spring.main.allow-circular-references=true
+#keycloak.credentials.secret=myclientsecret
+#keycloak.use-resource-role-mappings=true
+#keycloak.bearer-only=true
+#keycloak.enabled=true
