add "keyCloak" buttons

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ keycloak.auth-server-url=http://192.168.0.105:8081/
 keycloak.realm=cookies
 keycloak.resource=cookies
 keycloak.credentials.secret=elJwPcXHHFKCbDYNCpNTANr7wzOKZ41I
-keycloak.public-client=true
+keycloak.public-client=false
 keycloak.use-resource-role-mappings=true
 
 spring.main.allow-circular-references=true
